<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="35dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/popup_text"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/filters_title"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/clear_filters_bt"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/filters_tick_description"
                android:scaleType="fitCenter"
                android:src="@drawable/filter_off" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginVertical="15dp">

            <TextView
                android:id="@+id/lbType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2.5"
                android:gravity="center_vertical"
                android:text="@string/filters_type"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/typeSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="#AAF6DDFF"
                android:gravity="center"
                android:text="@string/filters_type_selection"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- mi filtro por marca    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginVertical="15dp">

            <TextView
                android:id="@+id/lbBrand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2.5"
                android:gravity="center_vertical"
                android:text="@string/filters_brand"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/brandSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="#AAF6DDFF"
                android:gravity="center"
                android:text="@string/filters_brand_selection"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginVertical="15dp">

            <!-- lbMaxPrice ocupa una línea completa -->
            <TextView
                android:id="@+id/lbMaxPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/filters_max_price"
                android:textColor="#000000"
                android:textSize="14sp" />

            <!-- Espacio entre lbMaxPrice y SeekBar -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <!-- LinearLayout con SeekBar y textos Min/Max centrados -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"

                android:layout_marginVertical="5dp">

                <!-- Texto Min -->
                <TextView
                    android:id="@+id/minPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="left"
                    android:text="X.X"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <!-- SeekBar -->
                <SeekBar
                    android:id="@+id/MaxPriceSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="#AAF6DDFF"
                    android:max="150"
                    android:paddingHorizontal="5dp" />

                <!-- Texto Max -->
                <TextView
                    android:id="@+id/maxPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="right"
                    android:text="Y.Y"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </LinearLayout>

            <!-- lbSelectedMaxPrice ocupa una línea completa -->
            <TextView
                android:id="@+id/lbSelectedMaxPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/filters_max_price_selection"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/filters_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/filters_cross_description"
                android:scaleType="fitCenter"
                android:src="@drawable/cross"
                app:tint="@android:color/holo_red_dark" />

            <ImageButton
                android:id="@+id/filters_accept_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/filters_tick_description"
                android:scaleType="fitCenter"
                android:src="@drawable/tick"
                app:tint="@android:color/holo_green_dark" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

