...
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Gasolina 95"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/tvGasolina95E5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbGasoleos"
        tools:text="Gasolina 95" />

    <TextView
...
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/lbGasolina95E5"
        app:layout_constraintTop_toBottomOf="@id/lbGasolina95E5"
        tools:text="Diesel" />

    <TextView
        android:id="@+id/tvGasoleoA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/tvGasolina95E5"
...
